# Greenhouse-Public

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
hardware/enclosure/: README.md
ios/GreenhouseMonitor/GreenhouseMonitor/: ContentView.swift  GreenhouseMonitorApp.swift  Models.swift  PairingView.swift  QRScannerView.swift  Services.swift  SettingsView.swift
ios/GreenhouseMonitor/GreenhouseMonitor.xcodeproj/: project.pbxproj
ios/GreenhouseMonitor/GreenhouseMonitor.xcodeproj/xcshareddata/xcschemes/: GreenhouseMonitor.xcscheme
pi/greenhouse_monitor/: __init__.py  __main__.py  app.py  collector.py  config.py  db.py  network.py  pairing.py  sensors.py
pi/scripts/: install.sh
pi/systemd/: greenhouse-monitor.service
tests/: test_api.py  test_db.py  test_pairing.py  test_sensors.py
